@@ -57,7 +57,7 @@ $results     =  {};
 $function    =  $factory->new_notifier
    (  desc        => 'the test function notifier',
       max_workers => 3,
-      name        => 'function_test',
+      name        => 'function_test2',
       on_recv     => sub { shift; shift; sum @_ },
       on_return   => sub {
          shift; $results->{ $_[ 0 ]->[ 0 ] } = $_[ 0 ]->[ 1 ]; return 1 },
